# algonebula

./: .clangd  .geminiignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  HOWTO.md  MUSICAL_RULES.md  README.md  ROADMAP.md  STATE.md  implementation_plan.md  test_out.txt
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: Bitcrush.h  EffectChain.h  ModLFO.h  PingPongDelay.h  PlateReverb.h  SafetyProcessor.h  ShimmerReverb.h  StereoChorus.h  StereoDelay.h  StereoEffect.h  StereoFlanger.h  StereoPhaser.h  TapeSaturation.h
src/engine/: AHDSREnvelope.h  BitwiseGrid.h  BriansBrain.cpp  BriansBrain.h  BrownianField.cpp  BrownianField.h  CellEditQueue.h  CellularEngine.h  ClockDivider.h  CpuStepTimer.h  CyclicCA.cpp  CyclicCA.h  FactoryPatternLibrary.h  FactoryPresets.h  GameOfLife.cpp  GameOfLife.h  Grid.h  Lenia3DStub.h  LeniaEngine.cpp  LeniaEngine.h  Microtuning.h  NoiseLayer.h  ParticleSwarm.cpp  ParticleSwarm.h  PolyBLEPOscillator.h  ReactionDiffusion.cpp  ReactionDiffusion.h  SVFilter.h  ScaleQuantizer.h  SubOscillator.h  SynthVoice.h
src/gpu/: EngineAdapters.cpp  EngineAdapters.h  GpuComputeManager.cpp  GpuComputeManager.h  GpuGridBridge.h  GridComputeAdapter.cpp  GridComputeAdapter.h  Lenia3DCompute.cpp  Lenia3DCompute.h
src/gpu/bridge/ghostsun_render/: SeparableLeniaEngine.h
src/gpu/shaders/: brians_brain.wgsl  brownian_field.wgsl  cyclic_ca.wgsl  gol.wgsl  lenia_2d.wgsl  particle_swarm.wgsl  reaction_diffusion.wgsl
src/ui/: EffectsPanel.h  GridComponent.h  NebulaColours.cpp  NebulaColours.h  NebulaLookAndFeel.cpp  NebulaLookAndFeel.h  VolumeComponent.h
test/: HeadlessTest.cpp
